--- a/ShahWilayat/Views/Shared/_HeaderNavBar.cshtml
+++ b/ShahWilayat/Views/Shared/_HeaderNavBar.cshtml
@@ -28,7 +28,7 @@
                         <a class="dropdown-toggle nav-link dropdown-user-link" href="#" data-toggle="dropdown">
                             <span class="mr-1">
                                 Hello,
-                                <span class="user-name text-bold-700">John Doe</span>
+                                <span class="user-name text-bold-700">@{ @Session["FirstName"].ToString(); }</span>
                             </span>
                             <span class="avatar avatar-online">
                                 <img src="~/Content/app-assets/images/portrait/small/user.png" alt="avatar"><i></i>
