Done with Make Payments, Discount, Waive off

--- a/ShahWilayat/Views/Shared/_MasterPage.cshtml
+++ b/ShahWilayat/Views/Shared/_MasterPage.cshtml
@@ -29,6 +29,8 @@
     @Styles.Render("~/Content/Select2")
 
     @Styles.Render("~/Content/FileUpload")
+
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.css">
     <style>
         #cover-spin {
             position: fixed;
@@ -128,6 +130,7 @@
 
     @Scripts.Render("~/bundles/FileUpload")
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
     <script src="~/Scripts/assets/js/PagesJS/Constant.js"></script>
     <script src="~/Scripts/assets/js/PagesJS/Nav.js"></script>
     <script type="text/javascript">
