--- a/ShahWilayat/Views/Login/Index.cshtml
+++ b/ShahWilayat/Views/Login/Index.cshtml
@@ -54,7 +54,7 @@
                                 <div class="card-header border-0">
                                     <div class="card-title text-center">
                                         <div class="p-1">
-                                            <img src="~/Content/app-assets/images/logo/swchsLogo.png" alt="Shah Wilayat">
+                                            <img src="~/Content/app-assets/images/logo/swchsLogo.png" class="img-fluid" alt="Shah Wilayat">
                                         </div>
                                     </div>
                                     <h6 class="card-subtitle line-on-side text-muted text-center font-small-3 pt-2">
