done with Associate Allotment

--- a/ShahWilayat/Views/Payment/Index.cshtml
+++ b/ShahWilayat/Views/Payment/Index.cshtml
@@ -21,6 +21,18 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
+                                <label for="ddlAllotmentType">Allotment Type</label>
+                                <select class="form-control ddlAllotmentType" >
+                                    <option value="0">--Select--</option>
+                                    <option value="1">Original Allotment</option>
+                                    <option value="2">Doubling Allotment</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
                                 <label for="ddlMember">Member</label>
                                 <select class="form-control ddlMember select2" style="width:100%"></select>
                             </div>
@@ -175,7 +187,7 @@
 {
 
 
-    <script src="~/Scripts/assets/js/PagesJS/Payments.js"></script>
+    <script src="~/Scripts/assets/js/PagesJS/Payments.js?v=1"></script>
 
 
 }
