Done with Payment that have a feature for increasing rates of payment above 100%.

--- a/ShahWilayat/Views/Payment/Index.cshtml
+++ b/ShahWilayat/Views/Payment/Index.cshtml
@@ -133,7 +133,7 @@
                                         <td class="tdPaidPercent text-center">-</td>
                                         <td class="tdDueDate text-center">-</td>
                                         <td class="text-center">
-                                            <a href="javascript:void(0)" data-toggle="modal" data-target="#CreatePaymentAmount"  title="Make Payment"><i class="la la-money success"></i></a>
+                                            <a href="javascript:void(0)" style="pointer-events: none;" class="btnEnterAmount" data-toggle="modal" data-target="#CreatePaymentAmount" onclick="SetPaidAmount(this)"  title="Make Payment"><i class="la la-money success"></i></a>
                                         </td>
                                     </tr>
                                 </tbody>
