--- a/ShahWilayat/Views/Tenure/Index.cshtml
+++ b/ShahWilayat/Views/Tenure/Index.cshtml
@@ -93,7 +93,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="txtEndDate">Tenure</label>
+                                <label for="txtEndDate">End Date</label>
                                 <input type="text" class="form-control DatePicker txtEndDate" placeholder="yyyy-mm-dd">
                             </div>
                         </div>
