--- a/ShahWilayat/Views/Plot/Index.cshtml
+++ b/ShahWilayat/Views/Plot/Index.cshtml
@@ -89,7 +89,7 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="txtPlotNo">Plot No</label>
-                                <input type="text" class="form-control txtPlotNo notrequired" placeholder="Enter plot no">
+                                <input type="text" class="form-control txtPlotNo" placeholder="Enter plot no">
                             </div>
                         </div>
 
@@ -124,6 +124,18 @@
                             </div>
                         </div>
 
+                        <div class="col-md-3">
+                            <div class="fileinput fileinput-new" data-provides="fileinput">
+                                <label>Site Plan</label>
+                                <span class="btn btn-block btn-outline btn-info btn-file">
+                                    <span class="fileinput-new">Attach Site Plan</span>
+                                    <i class="fa fa-upload"></i>&nbsp;&nbsp;
+                                    <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtSitePlan notrequired" accept="image/*" />
+                                </span>
+                                <span class="fileinput-filename"></span>
+                                <a href="#" class="close fileinput-exists" data-dismiss="fileinput" style="float: none">×</a>
+                            </div>
+                        </div>
                     </div>
 
 
@@ -169,7 +181,7 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="txtPlotNo_upd">Plot No</label>
-                                <input type="text" class="form-control txtPlotNo_upd notrequired" placeholder="Enter plot no">
+                                <input type="text" class="form-control txtPlotNo_upd" placeholder="Enter plot no">
                             </div>
                         </div>
 
@@ -201,6 +213,19 @@
                             <div class="form-group">
                                 <label for="txtExtraSize_upd">Extra Size</label>
                                 <input type="text" class="form-control txtExtraSize_upd" disabled="disabled" placeholder="Enter extra size">
+                            </div>
+                        </div>
+
+                        <div class="col-md-3">
+                            <div class="fileinput fileinput-new" data-provides="fileinput">
+                                <label>Site Plan</label>
+                                <span class="btn btn-block btn-outline btn-info btn-file">
+                                    <span class="fileinput-new">Attach Site Plan</span>
+                                    <i class="fa fa-upload"></i>&nbsp;&nbsp;
+                                    <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtSitePlan_upd notrequired" accept="image/*" />
+                                </span>
+                                <span class="fileinput-filename"></span>
+                                <a href="#" class="close fileinput-exists" data-dismiss="fileinput" style="float: none">×</a>
                             </div>
                         </div>
 
@@ -319,6 +344,7 @@
             <input type="hidden" class="hdnHasAlotted" value="${HasAlotted}" />
             <input type="hidden" class="hdnUnitRate" value="${UnitRate}" />
             <input type="hidden" class="hdnTotalSize" value="${TotalSize}" />
+            <input type="hidden" class="hdnSitePlan" value="${SitePlan}" />
 
             <td></td>
             <td class="project-title tdPlotType">${PlotType}</td>
@@ -334,6 +360,8 @@
 
             </td>
             <td class="project-title" nowrap>
+                <a href="${SitePlan==null?'Null':'Abc'}" data-toggle="tooltip" data-placement="top" data-original-title="Download Site Plan" download><i class="la la-cloud-download warning"></i></a>&nbsp;
+
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditPlot" onclick="EditPlot(this)" data-toggle="tooltip" data-placement="top" data-original-title="Edit Plot"><i class="la la-pencil-square success"></i></a>
 
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#DeletePlot" onclick="EditPlot(this)" data-toggle="tooltip" data-placement="top" data-original-title="Delete Plot"><i class="la la-trash danger"></i></a>
